--- a/projects/ngx-ramblers/src/app/carousel/view/carousel.html
+++ b/projects/ngx-ramblers/src/app/carousel/view/carousel.html
@@ -1,29 +1,25 @@
 <div class="carousel-wrapper">
   <div class="slider-container">
-    <div class="sc-inner">
+    <div class="sc-inner" *ngIf="lazyLoadingMetadata">
       <carousel [noPause]="false" [isAnimated]="true"
-                [interval]="carouselData.slideInterval || 5000"
-                [showIndicators]="carouselData.showIndicators && showIndicators"
-                [(activeSlide)]="activeSlideIndex"
+                [interval]="album.slideInterval || 5000"
+                [showIndicators]="album.showIndicators && showIndicators"
+                [(activeSlide)]="lazyLoadingMetadata.activeSlideIndex"
                 (activeSlideChange)="activeSlideChange(false, $event)">
-        <app-carousel-story-navigator *ngIf="!hideStoryNavigator && carouselData.showStoryNavigator"
-                                      [imageTags]="contentMetadata?.imageTags"
+        <app-carousel-story-navigator *ngIf="!hideStoryNavigator && album.showStoryNavigator"
+                                      [imageTags]="lazyLoadingMetadata.contentMetadata?.imageTags"
                                       [index]="index"
                                       (tagChanged)="tagChanged($event)"></app-carousel-story-navigator>
-        <slide *ngFor="let slide of viewableSlides; let index = index;">
-          <img class="img-fluid" loading="lazy" *ngIf="slide" [src]="imageSourceFor(slide.image)" [alt]="slide.text"
-               style="display: block; width: 100%;">
+        <slide *ngFor="let slide of lazyLoadingMetadata.selectedSlides; let index = index;">
+          <img class="img-fluid w-100" loading="lazy" *ngIf="slide" [src]="imageSourceFor(slide.image)"
+               [alt]="slide.text">
           <div class="carousel-caption">
             <h4>{{slide.text}}</h4>
-            <div>
+            <div *ngIf="slide.eventId">
               <a delay="500" class="badge event-date"
-                 *ngIf="showIndicators && slide.eventId" [tooltip]="eventTooltip(slide)"
-                 [placement]="'right'" [href]="eventUrl(slide)">
-                on {{slide.date | displayDate}}  </a>
-              <a delay="500" class="badge event-date"
-                 *ngIf="!showIndicators && slide.eventId" [tooltip]="eventTooltip(slide)"
-                 [placement]="'bottom'" [href]="eventUrl(slide)">
-                on {{slide.date | displayDate}}  </a>
+                 [tooltip]="eventTooltip(slide)"
+                 [placement]="!showIndicators?'bottom':'right'" [href]="urlService.eventUrl(slide)">
+                on {{slide.date | displayDate}}</a>
             </div>
           </div>
         </slide>
