--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
@@ -14,6 +14,9 @@
     <app-dynamic-content-view-carousel *ngIf="actions.isCarousel(row)"
                                        [row]="row"
                                        [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"></app-dynamic-content-view-carousel>
+    <app-dynamic-content-view-album-index *ngIf="actions.isAlbumIndex(row)"
+                                       [row]="row"
+                                       [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"></app-dynamic-content-view-album-index>
     <app-dynamic-content-view-album *ngIf="actions.isAlbum(row)"
                                        [row]="row"
                                        [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"></app-dynamic-content-view-album>
